# Aquatsuki

./: .gitignore  README.md
aquabot_example/: CMakeLists.txt  package.xml
aquabot_example/src/: aquabot_node.cpp
detection_obstacle/: CMakeLists.txt  package.xml
detection_obstacle/scripts/: detection_obstacle_node.py  opencv_decoder.py
detection_obstacle/src/: yaw_publisher.cpp
detection_obstacle/src/detection_obstacle/: minimal_image_subscriber_node.py  obstacle.py
detection_obstacle/src/detection_obstacle_pkg/: detection_obstacle_image_node.py  obstacle.py  opencv_decoder_node.py
opencv_example/: CMakeLists.txt  package.xml
projection/: CMakeLists.txt  package.xml
projection/include/projection/: projection.hpp
projection/src/: projection.cpp
